cluster/manifests/pushgateway-statsd/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pushgateway-statsd
  labels:
    name: pushgateway-statsd
    pod-security.kubernetes.io/enforce: restricted
